# local-video-upscaler

./: .gitattributes  .gitignore  AppPaths.cs  CHANGELOG.md  ExportService.cs  FrameInterpolationService.cs  LICENSE  MainForm.cs  NvidiaVsrSettings.cs  Program.cs  README.md  RtxLocalVideo.csproj  SystemProbe.cs  THIRD-PARTY-NOTICES.md  VideoProbe.cs
cli/: CliProgram.cs  LocalVSR.Cli.csproj
docs/: RELEASE-CHECKLIST.md
native/RifeProcessor/: CMakeLists.txt  RifeProcessor.cpp  build.ps1
native/VsrProbe/: VsrProbe.cpp  build.ps1
native/VsrProcessor/: VsrProcessor.cpp  build.ps1
tools/: benchmark-ui-export.ps1  build-release.ps1  install-ffmpeg.ps1  install-rife.ps1
